--- a/EDA/Scott/DS522_Team_EDA.ipynb
+++ b/EDA/Scott/DS522_Team_EDA.ipynb
@@ -43,22 +43,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (89 kB)\n",
-      "Collecting numpy>=1.26.0 (from pandas)\n",
-      "  Using cached numpy-2.1.3-cp312-cp312-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: pandas in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from pandas) (2.1.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Using cached pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl (11.4 MB)\n",
-      "Using cached numpy-2.1.3-cp312-cp312-macosx_14_0_arm64.whl (5.1 MB)\n",
-      "Using cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
-      "Using cached tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
-      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
-      "Successfully installed numpy-2.1.3 pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n"
+      "Requirement already satisfied: pytz>=2020.1 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/scotttaylor/Library/Mobile Documents/com~apple~CloudDocs/Study/MSDS/CityU/courses/[1252] Fall 2024-2025/DS522 [data acquisition]/Team Project/code/Fall_2025_DS522_Team_Project/.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -120,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +637,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "players_df"
+   ]
   },
   {
    "cell_type": "markdown",
